# fastapi_blog

./: .gitignore  data.text  database.db  database.db-journal  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
app/controllers/posts/api/: posts.py
app/controllers/users/api/: users.py
app/core/: config.py  database.py
app/models/: __init__.py  post.py  posts.py  users.py
app/schemas/: post_schemas.py  user_schemas.py
app/services/: post_services.py  users_services.py
static/css/: output.css  styles.css
templates/: base.html  error.html  index.html  post.html
