[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.39",
]
